# sircalculator

./: AppImageBuilder.yml  CMakeCache.txt  CMakeLists.txt  Dockerfile  README.md  SIR_model.pro  cmake_install.cmake  install_manifest.txt  mainwindow.ui  r4_method.cpp  r4_method.h  render_area.cpp  render_area.h  sir_method.cpp  sircalculator  sircalculator.pro
AppDir/: .bundle.yml  .env  sir_calculator.desktop
AppDir/usr/lib/x86_64-linux-gnu/glib-2.0/: gio-querymodules  glib-compile-schemas
AppDir/usr/share/doc/libqt5charts5/: copyright
AppDir/usr/share/doc/libqt5svg5/: copyright
AppDir/usr/share/doc/libqt5widgets5/: copyright
AppDir/usr/share/lintian/overrides/: libqt5gui5
appimage-builder-cache/: AppRun-amd64  AppRun-arm64  AppRun-armhf  AppRun-i386
appimage-builder-cache/etc/apt/: apt.conf  key_02266b674654125fc4ef32aee4129e99  key_47d9bd916243f15f290376dedbfdb7e4  key_944de3999d9e13413a5e887eef86f7f0  sources.list  trusted.gpg
appimage-builder-cache/var/lib/dpkg/: status
include/: sir_interface.h  sir_interface.h.gch  sir_method.h
res/: CMakeLists.txt  cmake_install.cmake  sir_calculator.desktop
src/: CMakeLists.txt  cmake_install.cmake  icons.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  r4_method.cpp  r4_method.h  render_area.cpp  render_area.h  sir_interface.cpp  sir_interface.h  sir_interface.ui  sir_menu.cpp  sir_menu.h  sir_menu.ui  sir_method.cpp  sir_method.h  sir_plot.cpp  sir_plot.h  sir_plot.ui  sir_types.h
src/sir_calculator_autogen/: moc_predefs.h  mocs_compilation.cpp
(+63 files in other folders)
